--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 	<div class="container">
 		<h1>Song 2</h1>
 
+		<div class="notification"></div>
+
 		<form action="#">
 			<div class="field">
 				<label for="url">Youtube URL</label>
@@ -30,9 +32,10 @@
 				<button>Convert</button>
 			</div>
 		</form>
-	</div>
+	</div>	
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
