--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Song 2</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<title>Song</title>
 	<link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 	<div class="container">
-		<h1>Song 2</h1>
+		<h1>Song</h1>
 
 		<div class="notification"></div>
 
@@ -34,7 +33,6 @@
 		</form>
 	</div>	
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 	<script src="js/app.js"></script>
 </body>
